[project]
name = "disk-expansion-precheck"
version = "0.1.2"
description = "An MCP Server for Alibaba Cloud ECS disk expansion precheck."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "tryp0xy1us", email = "tryp0xy1us@outlook.com" }
]
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "aliyun", "ecs", "disk", "precheck"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "alibabacloud-ecs20140526==7.6.2",
    "alibabacloud-hbr20170908==2.4.1",
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/tryp0xy1us/disk-expansion-precheck"
Repository = "https://github.com/tryp0xy1us/disk-expansion-precheck"
Issues = "https://github.com/tryp0xy1us/disk-expansion-precheck/issues"

[project.scripts]
disk-expansion-precheck = "disk_expansion_precheck:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
